--- a/package.json
+++ b/package.json
@@ -14,17 +14,28 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.2.0",
     "@mui/material": "^6.2.0",
+    "@mui/material-nextjs": "^6.2.0",
     "@mui/x-data-grid": "^7.23.1",
+    "@mui/x-data-grid-generator": "^7.24.1",
+    "@neondatabase/serverless": "^0.10.4",
+    "@toolpad/core": "^0.11.0",
+    "drizzle-orm": "^0.38.2",
+    "moment": "^2.30.1",
     "next": "15.1.0",
+    "pg": "^8.13.1",
+    "plaid": "^30.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-router-dom": "^7.0.2"
+    "react-plaid-link": "^3.6.1",
+    "react-router-dom": "^7.0.2",
+    "uuid": "^11.0.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "drizzle-kit": "^0.28.0",
     "eslint": "^9",
     "eslint-config-next": "15.1.0",
     "postcss": "^8",
